<resources>
    <string name="app_name">PhoneInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bas menu</string>
    <string name="menu_gallery">Izlew</string>
    <string name="menu_slideshow">Saylandılar</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Sazlamalar</string>
    <string name="menu_favorites">Favorites</string>
    <string name="redmi_note_7">Redmi note 7</string>
    <string name="bas_menu">Bas menu</string>
    <string name="izlew">Izlew</string>
    <string name="saylandılar">Saylandılar</string>
    <string name="sazlamalar">Sazlamalar</string>
    <string name="biz_haqq_m_zda">Biz haqqımızda</string>
</resources>