<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uz.texnopos.phoneinfo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="uz.texnopos.phoneinfo.ui.search.SearchFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="uz.texnopos.phoneinfo.ui.favorite.FavoriteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="uz.texnopos.phoneinfo.ui.settings.SettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="uz.texnopos.phoneinfo.ui.aboutUs.AboutUs"
        android:label="AboutUs" />
</navigation>